5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1822_3177.log
== TEST (2019-06-13 11:04:56) 
-- CODE:
from numpy import*
a = input("palavra:")
i = o
for x in a:
	i+= i
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:05:13) 
-- CODE:
from numpy import*
a = input("palavra:")
i = 0
for x in a:
	i+= i
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:05:21) 
-- CODE:
from numpy import*
a = input("palavra:")
i = 0
for x in a:
	i+= i
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:05:32) 
-- CODE:
from numpy import*
a = input("palavra:")
i = 0
for x in a:
	i+= i
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:43:37) 
-- CODE:
from numpy import*
x = input("palavra:")
a = 0
e = 0
i = 0
o = 0
u = 0

for x in a:
	if(x == a):
	a = 1 + a
	print(a)
	

-- ERROR:
File "XXXX", line 11
    a = 1 + a
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:43:41) 
-- CODE:
from numpy import*
x = input("palavra:")
a = 0
e = 0
i = 0
o = 0
u = 0

for x in a:
	if(x == a):
	a = 1 + a
print(a)
	

-- ERROR:
File "XXXX", line 11
    a = 1 + a
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:43:48) 
-- CODE:
from numpy import*
x = input("palavra:")
a = 0
e = 0
i = 0
o = 0
u = 0

for x in a:
	if(x == a):
		a = 1 + a
	print(a)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:23) 
-- CODE:
from numpy import*
x = input("palavra:")
a = 0
e = 0
i = 0
o = 0
u = 0

for x in a:
	if(size(x) == a):
		a = 1 + a
	print(a)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:55) 
-- CODE:
from numpy import*
x = input("palavra:")
a = 0
e = 0
i = 0
o = 0
u = 0

for x in a:
	if(size(x) == a):
		a = 1 + a
	print(a)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:54:02) 
-- CODE:
from numpy import*
x = input("palavra:")
a = 0
e = 0
i = 0
o = 0
u = 0

for x in a:
	if(size(x) == a):
		a = 1 + a
	print(a)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:54:07) 
-- CODE:
from numpy import*
x = input("palavra:")
a = 0
e = 0
i = 0
o = 0
u = 0

for x in a:
	if(size(x) == a):
		a = 1 + a
	print(a)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:54:39) 
-- CODE:
from numpy import*
x = input("palavra:")
a = 0
e = 0
i = 0
o = 0
u = 0

for x in a:
	if(size(x) == a):
		a = 1 + a
	print(a)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:54:50) 
-- CODE:
from numpy import*
x = input("palavra:")
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
